--- a/ui/src/app/components/object-detail/object-detail.component.html
+++ b/ui/src/app/components/object-detail/object-detail.component.html
@@ -710,7 +710,7 @@
     <!-- Check constraint -->
     <mat-tab>
       <ng-template mat-tab-label>
-        <span>CHECK CONSTRAINT</span>
+        <span>CHECK CONSTRAINTS</span>
       </ng-template>
       <div class="cc-tab-container">
         <table mat-table [dataSource]="ccDataSource">
