added the test case for crud and validate

--- a/ui/src/app/components/object-detail/object-detail.component.html
+++ b/ui/src/app/components/object-detail/object-detail.component.html
@@ -816,7 +816,7 @@
                 <mat-icon [matMenuTriggerFor]="menu">more_vert</mat-icon>
                 <mat-menu #menu="matMenu" xPosition="before">
                   <button [disabled]="!isCcEditMode" mat-menu-item (click)="dropCc(element)">
-                    <span>Remove Check Constraints</span>
+                    <span>Remove constraint</span>
                   </button>
                 </mat-menu>
               </div>
