--- a/ui/src/app/components/object-detail/object-detail.component.scss
+++ b/ui/src/app/components/object-detail/object-detail.component.scss
@@ -81,6 +81,7 @@
   }
 }
 .add-pk-column,
+.add-cc-column,
 .add-column {
   margin-left: 50%;
   padding: 10px;
@@ -99,6 +100,7 @@
 .column-tab-container,
 .fk-tab-container,
 .pk-tab-container,
+.cc-tab-container,
 .index-tab-container,
 .sequence-tab-container {
   height: 84%;
@@ -201,7 +203,7 @@
   .mat-column-srcColMaxLength {
     min-width: 100px;
   }
-  
+
   .mat-column-spSequenceKind{
     min-width: 250px;
   }
@@ -314,4 +316,12 @@ tr.mat-mdc-row {
 
 .custom-mat-form-field .mat-select-panel .mat-option {
   white-space: nowrap;
+}
+
+.overflow-cell {
+  max-width: 150px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
 }
