--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -11,12 +11,11 @@
       color="primary"
       class="split-button-left"
       id='connect-to-database-btn'
-      [disabled]="!(spannerConfig.GCPProjectID != '' &&spannerConfig.SpannerInstanceID != '')"
-      [routerLink]="'/source/direct-connection'"
+      (click)="connectToDatabase()"
     >
       Connect to database
     </button>
-    <button mat-raised-button color="primary" [disabled]="!(spannerConfig.GCPProjectID != '' &&spannerConfig.SpannerInstanceID != '')" class="split-button-right" [matMenuTriggerFor]="menu">
+    <button mat-raised-button color="primary"  class="split-button-right" [matMenuTriggerFor]="menu">
       <mat-icon aria-hidden="false" aria-label="More options">expand_more</mat-icon>
     </button>
     <mat-menu #menu="matMenu" xPosition="before">
