--- a/ui/src/app/components/object-detail/object-detail.component.html
+++ b/ui/src/app/components/object-detail/object-detail.component.html
@@ -707,134 +707,7 @@
       </div>
     </mat-tab>
 
-    <!-- Check constraint -->
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <span>CHECK CONSTRAINTS</span>
-      </ng-template>
-      <div class="cc-tab-container">
-        <table mat-table [dataSource]="ccDataSource">
-          <ng-container matColumnDef="srcDatabase">
-            <th mat-header-cell class="db_name" *matHeaderCellDef [attr.colspan]="3">{{ srcDbName }}</th>
-          </ng-container>
 
-          <ng-container matColumnDef="spDatabase">
-            <th mat-header-cell *matHeaderCellDef class="db_name" [attr.colspan]="4" >
-              <div class="spanner_edit-button">
-                <span>Spanner</span>
-                <div *ngIf="
-                    !isCcEditMode &&
-                    ccDataSource.length > 0 &&
-                    currentObject!.isSpannerNode &&
-                    !currentObject.isDeleted
-                  ">
-                  <button mat-stroked-button color="primary" (click)="toggleCcEdit()">
-                    <mat-icon class="edit-icon">edit</mat-icon>
-                    EDIT
-                  </button>
-                </div>
-              </div>
-            </th>
-          </ng-container>
-
-          <ng-container matColumnDef="srcSno">
-            <th class="table_header" mat-header-cell *matHeaderCellDef>S. No.</th>
-            <td mat-cell *matCellDef="let element"  >
-              <span *ngIf="element.get('srcSno').value != 0">
-              {{ element.get('srcSno').value }}
-             </span>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="srcConstraintName">
-            <th class="table_header" mat-header-cell *matHeaderCellDef>Constraint Name</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.get('srcConstraintName').value }}
-            </td>
-
-          </ng-container>
-
-          <ng-container matColumnDef="srcCondition">
-            <th class="table_header" mat-header-cell *matHeaderCellDef>Condition</th>
-            <td mat-cell *matCellDef="let element" matTooltip="{{ element.get('srcCondition').value }}"
-            matTooltipPosition="above" class="overflow-cell">
-
-              {{ element.get('srcCondition').value }}
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="spSno">
-            <th mat-header-cell class="table_header" *matHeaderCellDef>S. No.</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.get('spSno').value }}
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="spConstraintName">
-            <th class="table_header" mat-header-cell *matHeaderCellDef>Constraint Name</th>
-            <td mat-cell *matCellDef="let element">
-              <div *ngIf="isCcEditMode">
-                <input
-                  matInput
-                  class="name_input"
-                  type="text"
-                  [formControl]="element.get('spConstraintName')"
-                  matTooltip="No special characters allowed except underscore."
-                  [matTooltipDisabled]="!element.get('spConstraintName')?.hasError('pattern')"
-                   />
-              </div>
-              <p *ngIf="!isCcEditMode">{{ element.get('spConstraintName').value }}</p>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="spCondition">
-            <th class="table_header" mat-header-cell *matHeaderCellDef>Condition</th>
-            <td mat-cell *matCellDef="let element" >
-              <div *ngIf="isCcEditMode">
-                   <textarea name="spConstraintName"  matInput
-                   class="name_input" [formControl]="element.get('spCondition')"
-                   matTooltip="Enter valid clause for CHECK constraints" id="ck1"
-                   [matTooltipDisabled]="!element.get('spCondition')?.hasError('pattern')">
-                  </textarea>
-              </div>
-              <p *ngIf="!isCcEditMode" matTooltip="{{ element.get('spCondition').value }}"
-              matTooltipPosition="above" class="overflow-cell">{{ element.get('spCondition').value }}</p>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="dropButton">
-            <th mat-header-cell class="table_header" *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element" [ngClass]="{ 'drop-button-left-border': isCcEditMode }">
-              <div class="actions" *ngIf="
-              isCcEditMode &&
-                  currentObject!.isSpannerNode
-                ">
-                <mat-icon [matMenuTriggerFor]="menu">more_vert</mat-icon>
-                <mat-menu #menu="matMenu" xPosition="before">
-                  <button [disabled]="!isCcEditMode" mat-menu-item (click)="dropCc(element)">
-                    <span>Remove constraint</span>
-                  </button>
-                </mat-menu>
-              </div>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="['srcDatabase', 'spDatabase']"></tr>
-          <tr mat-header-row *matHeaderRowDef="displayedCCColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedCCColumns"></tr>
-        </table>
-
-        <div *ngIf="isCcEditMode" class="add-cc-column">
-          <button mat-button color="primary" class="add-column-btn" type="button" (click)="addCcColumn()">
-            <mat-icon>add</mat-icon>
-            ADD COLUMN
-          </button>
-        </div>
-
-      </div>
-    </mat-tab>
-
-    <!-- Check Constraints -->
 
     <mat-tab label="INTERLEAVE" *ngIf="
         ((interleaveStatus.tableInterleaveStatus &&
@@ -869,6 +742,135 @@
         </div>
       </div>
     </mat-tab>
+
+        <!-- Check constraint -->
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <span>CHECK CONSTRAINTS</span>
+          </ng-template>
+          <div class="cc-tab-container">
+            <table mat-table [dataSource]="ccDataSource">
+              <ng-container matColumnDef="srcDatabase">
+                <th mat-header-cell class="db_name" *matHeaderCellDef [attr.colspan]="3">{{ srcDbName }}</th>
+              </ng-container>
+
+              <ng-container matColumnDef="spDatabase">
+                <th mat-header-cell *matHeaderCellDef class="db_name" [attr.colspan]="4" >
+                  <div class="spanner_edit-button">
+                    <span>Spanner</span>
+                    <div *ngIf="
+                        !isCcEditMode &&
+                        ccDataSource.length > 0 &&
+                        currentObject!.isSpannerNode &&
+                        !currentObject.isDeleted
+                      ">
+                      <button mat-stroked-button color="primary" (click)="toggleCcEdit()">
+                        <mat-icon class="edit-icon">edit</mat-icon>
+                        EDIT
+                      </button>
+                    </div>
+                  </div>
+                </th>
+              </ng-container>
+
+              <ng-container matColumnDef="srcSno">
+                <th class="table_header" mat-header-cell *matHeaderCellDef>S. No.</th>
+                <td mat-cell *matCellDef="let element"  >
+                  <span *ngIf="element.get('srcSno').value != 0">
+                  {{ element.get('srcSno').value }}
+                 </span>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="srcConstraintName">
+                <th class="table_header" mat-header-cell *matHeaderCellDef>Constraint Name</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.get('srcConstraintName').value }}
+                </td>
+
+              </ng-container>
+
+              <ng-container matColumnDef="srcCondition">
+                <th class="table_header" mat-header-cell *matHeaderCellDef>Condition</th>
+                <td mat-cell *matCellDef="let element" matTooltip="{{ element.get('srcCondition').value }}"
+                matTooltipPosition="above" class="overflow-cell">
+
+                  {{ element.get('srcCondition').value }}
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="spSno">
+                <th mat-header-cell class="table_header" *matHeaderCellDef>S. No.</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.get('spSno').value }}
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="spConstraintName">
+                <th class="table_header" mat-header-cell *matHeaderCellDef>Constraint Name</th>
+                <td mat-cell *matCellDef="let element">
+                  <div *ngIf="isCcEditMode">
+                    <input
+                      matInput
+                      class="name_input"
+                      type="text"
+                      [formControl]="element.get('spConstraintName')"
+                      matTooltip="No special characters allowed except underscore."
+                      [matTooltipDisabled]="!element.get('spConstraintName')?.hasError('pattern')"
+                       />
+                  </div>
+                  <p *ngIf="!isCcEditMode">{{ element.get('spConstraintName').value }}</p>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="spCondition">
+                <th class="table_header" mat-header-cell *matHeaderCellDef>Condition</th>
+                <td mat-cell *matCellDef="let element" >
+                  <div *ngIf="isCcEditMode">
+                       <textarea name="spConstraintName"  matInput
+                       class="name_input" [formControl]="element.get('spCondition')"
+                       matTooltip="Enter valid clause for CHECK constraints" id="ck1"
+                       [matTooltipDisabled]="!element.get('spCondition')?.hasError('pattern')">
+                      </textarea>
+                  </div>
+                  <p *ngIf="!isCcEditMode" matTooltip="{{ element.get('spCondition').value }}"
+                  matTooltipPosition="above" class="overflow-cell">{{ element.get('spCondition').value }}</p>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="dropButton">
+                <th mat-header-cell class="table_header" *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element" [ngClass]="{ 'drop-button-left-border': isCcEditMode }">
+                  <div class="actions" *ngIf="
+                  isCcEditMode &&
+                      currentObject!.isSpannerNode
+                    ">
+                    <mat-icon [matMenuTriggerFor]="menu">more_vert</mat-icon>
+                    <mat-menu #menu="matMenu" xPosition="before">
+                      <button [disabled]="!isCcEditMode" mat-menu-item (click)="dropCc(element)">
+                        <span>Remove constraint</span>
+                      </button>
+                    </mat-menu>
+                  </div>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="['srcDatabase', 'spDatabase']"></tr>
+              <tr mat-header-row *matHeaderRowDef="displayedCCColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedCCColumns"></tr>
+            </table>
+
+            <div *ngIf="isCcEditMode" class="add-cc-column">
+              <button mat-button color="primary" class="add-column-btn" type="button" (click)="addCcColumn()">
+                <mat-icon>add</mat-icon>
+                ADD COLUMN
+              </button>
+            </div>
+
+          </div>
+        </mat-tab>
+
+        <!-- Check Constraints -->
 
     <mat-tab *ngIf="currentObject!.isSpannerNode && !currentObject!.isDeleted">
       <ng-template mat-tab-label>
@@ -1106,7 +1108,9 @@
       </button>
     </div>
 
-    <div class="save-button" *ngIf="isCcEditMode && currentTabIndex === 3">
+    <div class="save-button" *ngIf="isCcEditMode && ((interleaveStatus.tableInterleaveStatus &&
+    interleaveStatus.tableInterleaveStatus.Possible) ||
+    this.interleaveParentName !== null) ? currentTabIndex === 4:currentTabIndex === 3">
       <button mat-raised-button color="primary" (click)="saveCc()" [disabled]="!ccArray.valid" >
         SAVE & CONVERT
       </button>
