--- a/ui/src/app/components/object-detail/object-detail.component.html
+++ b/ui/src/app/components/object-detail/object-detail.component.html
@@ -1097,7 +1097,9 @@
         CANCEL
       </button>
     </div>
-    <div class="save-button" *ngIf="isCcEditMode && (interleaveParentName !== null ? currentTabIndex === 4:currentTabIndex === 3)">
+    <div class="save-button" *ngIf="isCcEditMode && ((interleaveStatus.tableInterleaveStatus &&
+    interleaveStatus.tableInterleaveStatus.Possible) ||
+    this.interleaveParentName !== null)? currentTabIndex === 4:currentTabIndex === 3">
       <button mat-raised-button color="primary" (click)="saveCc()" [disabled]="!ccArray.valid" >
         SAVE & CONVERT
       </button>
