Added integration test for check constraints
 Please enter the commit message for your changes. Lines starting

--- a/ui/src/app/components/object-detail/object-detail.component.scss
+++ b/ui/src/app/components/object-detail/object-detail.component.scss
@@ -213,7 +213,7 @@
     min-width: 100px;
   }
 
-  .mat-column-srcIsNotNull,
+  .mat-column-srcDefaultValue,
   .mat-column-srcDatabase,
   .mat-column-srcIndexOrder {
     border-right: 1px solid #cdcccd;
@@ -318,6 +318,12 @@ tr.mat-mdc-row {
   white-space: nowrap;
 }
 
+.trimmed-text {
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .overflow-cell {
   max-width: 150px;
   white-space: nowrap;
